--- a/lpm.html
+++ b/lpm.html
@@ -8,6 +8,7 @@
 <link rel="shortcut icon" href="http://img2.timeinc.net/people/favicon.ico"/>
 <script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery-1.11.1.min.js"></script>
 <script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery.mobile-1.4.3.min.js"></script>
+<!--jQuery waypoints plugin - http://imakewebthings.com/jquery-waypoints -->
 <script src="resources/js/waypoints.min.js"></script>
 <script src="resources/js/script.js"></script>
 </head>
