--- a/lpm.html
+++ b/lpm.html
@@ -1,139 +1,271 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" /> 
-<title>This Week's People: Mobile</title>
-<link href="resources/css/styles-mobile.css" rel="stylesheet" type="text/css" />
-<link rel="shortcut icon" href="http://img2.timeinc.net/people/favicon.ico"/>
-<script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery-1.11.1.min.js"></script>
-<script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery.mobile-1.4.3.min.js"></script>
-<!--jQuery waypoints plugin - http://imakewebthings.com/jquery-waypoints -->
-<script src="resources/js/waypoints.min.js"></script>
-<script src="resources/js/script.js"></script>
-</head>
-<body>
-<!--
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <title>This Week's People: Mobile</title>
+    <link
+      href="resources/css/styles-mobile.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="shortcut icon"
+      href="http://img2.timeinc.net/people/favicon.ico"
+    />
+    <script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery-1.11.1.min.js"></script>
+    <script src="https://subscription-assets.timeinc.com/prod/assets/themes/magazines/default/template-resources/js/shared/jquery/jquery.mobile-1.4.3.min.js"></script>
+    <!--jQuery waypoints plugin - http://imakewebthings.com/jquery-waypoints -->
+    <script src="resources/js/waypoints.min.js"></script>
+    <script src="resources/js/script.js"></script>
+  </head>
+  <body>
+    <!--
 Start of DoubleClick Floodlight Tag: Please do not remove
 Activity name of this tag: People_Thisweekspeopleissue_Landing Page_Mobile-Buy Now-Standard
 URL of the webpage where the tag is expected to be placed: http://subscription-assets.people.com/prod/assets/themes/magazines/SUBS/templates/velocity/site/pe-twr-dsktp/lpm.html
 This tag must be placed between the <body> and </body> tags, as close as possible to the opening tag.
 Creation Date: 06/16/2014
 -->
-<script type="text/javascript">
-var axel = Math.random() + "";
-var a = axel * 10000000000000;
-document.write('<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peoMobSt;ord=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>');
-</script>
-<noscript>
-<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peoMobSt;ord=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
-</noscript>
-<!-- End of DoubleClick Floodlight Tag: Please do not remove -->
+    <script type="text/javascript">
+      var axel = Math.random() + "";
+      var a = axel * 10000000000000;
+      document.write(
+        '<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peoMobSt;ord=' +
+          a +
+          '?" width="1" height="1" frameborder="0" style="display:none"></iframe>'
+      );
+    </script>
+    <noscript>
+      <iframe
+        src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peoMobSt;ord=1?"
+        width="1"
+        height="1"
+        frameborder="0"
+        style="display:none"
+      ></iframe>
+    </noscript>
+    <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
 
-<!--
+    <!--
 Start of DoubleClick Floodlight Tag: Please do not remove
 Activity name of this tag: People_Thisweekspeopleissue_Landing Page_Mobile-Buy Now-Unique
 URL of the webpage where the tag is expected to be placed: http://subscription-assets.people.com/prod/assets/themes/magazines/SUBS/templates/velocity/site/pe-twr-dsktp/lpm.html
 This tag must be placed between the <body> and </body> tags, as close as possible to the opening tag.
 Creation Date: 06/16/2014
 -->
-<script type="text/javascript">
-var axel = Math.random() + "";
-var a = axel * 10000000000000;
-document.write('<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peopl955;ord=1;num=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>');
-</script>
-<noscript>
-<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peopl955;ord=1;num=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
-</noscript>
+    <script type="text/javascript">
+      var axel = Math.random() + "";
+      var a = axel * 10000000000000;
+      document.write(
+        '<iframe src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peopl955;ord=1;num=' +
+          a +
+          '?" width="1" height="1" frameborder="0" style="display:none"></iframe>'
+      );
+    </script>
+    <noscript>
+      <iframe
+        src="https://3980839.fls.doubleclick.net/activityi;src=3980839;type=peopl017;cat=peopl955;ord=1;num=1?"
+        width="1"
+        height="1"
+        frameborder="0"
+        style="display:none"
+      ></iframe>
+    </noscript>
 
-<!-- End of DoubleClick Floodlight Tag: Please do not remove -->
+    <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
 
-<div class="wrap" >
-	<a name="top"></a>
-    <div id="screen1">
-		<img src="resources/images/img-logo-people.png" class="logo" />
-		<img src="resources/images/cvr-mobile.jpg" class="cvr" style="display:none" />	
-        <div id="socialIcons" >
-			 <a href="https://twitter.com/peoplemag" target="_blank"><img src="resources/images/img-logo-twit.png" id="twitter"  /></a>
-			 <a href="https://www.facebook.com/peoplemag" target="_blank"><img src="resources/images/img-logo-fb.png" id="facebook"  /></a>
-			 <a href="http://www.pinterest.com/people/" target="_blank"><img src="resources/images/img-logo-pint.png"  id="pinterest"  /></a>
-		</div>
-	    <div class="headline">In This Week's Issue:<br/><span id="headline"></span></div>
-		<div  id="nextScreen2" class="previewBut" onclick="toggleMe('screen2'); toggleMe('screen3'); scrollToAnchor('highlights'); "><img src="resources/images/img-preview-here.png"></div>
-        
-	</div>
-	<!--END SCREEN 1-->
-	
-	<div id="screen2">
-		<!--Page highlights-->
-	    <div id="highlights" style="height:100px;"><a name="highlights"><span class="header" style="float:left">HIGHLIGHTS <br/>THIS WEEK</span></a><span class="highlightIcon"><img src="resources/images/icn-highlight.png" /></span></div>
-		<div class="pageDiv"> <div class="page">P. <span id="pageNum1"></span></div><div id="page1"></div></div>
-		<div class="pageDiv"><div class="page">P. <span id="pageNum2"></span></div><div id="page2"></div></div>
-		<div class="pageDiv"><div class="page">P. <span id="pageNum3"></span> </div><div id="page3"></div></div>
-		<!--end Page highlights-->
-	</div>
-	<!--END SCREEN 2-->
-	<div id="screen3">
-		<!--Sneak Peek Images-->
-	    <div  style="height:85px;"><span class="headerSneak" style="float:left">SNEAK A PEEK</span></div>
-		<a name="sneakpeek"></a>
-		<div id="screen3a">
-		<div class="sneakPeekDiv" id="starTracksDiv" onclick="sneakPeekShow('starTracks');">
-			<div class="sneakPeek">Star Tracks</div><img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon" /><div style="clear:both"></div><div class="rotateText">Rotate screen for full page view</div><div id="starTracks"><br/></div>
-		
-		</div>
-		<div class="sneakPeekDiv" id="featureDiv" onclick="sneakPeekShow('feature'); "><div class="sneakPeek">Feature</div><img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon" /><div style="clear:both"></div><div class="rotateText">Rotate screen for full page view</div><div id="feature"><br/></div>
-		</div>
-		<div class="sneakPeekDiv" id="greatIdeasDiv" onclick="sneakPeekShow('greatIdeas');"><div class="sneakPeek">Great Ideas</div><img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon"/><div style="clear:both"></div><div class="rotateText">Rotate screen for full page view</div><div id="greatIdeas"><br/></div>
-		</div>
-		</div>
-		<!--end Sneak Peek Images-->
-	</div>
-	<!--END SCREEN 3-->
-	<div id="screen4">
-		
-	    <div style="height:100px;"><a name="getTheIssue"><span class="header" style="float:left">GET THE <br/>ISSUE NOW!</span></a></div>
-		<div id="screen4a">
-		<div class="buyIssueDiv">
-			<div class="buyIssueImg"><img src="resources/images/cvr-mobile.jpg" class="cvrClipped" style="display:none"  /></div><div class="buyIssue">BUY THIS WEEK'S <br/>DIGITAL ISSUE</div><div class="buyNowIcon"><a href="https://subscription.people.com/storefront/subscribe-to-people/site/pe-webappsingle.html" target="_blank"><img src="resources/images/icn-buy-now.png" id="buyNow"/></a></div>
-		</div>
-		
-		<div class="couponDiv"><div class="coupon">SAVE $1 ON <br/>THE NEWEST ISSUE </div><div class="couponImg"><a href="http://coupon.qples.com/qples/v3/printn.html?1691" target="_blank"><img src="resources/images/btn-click-here.png" id="coupon" /></a></div></div>
-	      
-		</div>
-		<div class="scrollUpBut" onclick="scrollToAnchor('top');">scroll&nbsp;<img src="resources/images/icn-topscroll.png" style="display:inline;width:33px; height:16px" />&nbsp;to top </div>
+    <div class="wrap">
+      <a name="top"></a>
+      <div id="screen1">
+        <img src="resources/images/img-logo-people.png" class="logo" />
+        <img
+          src="resources/images/cvr-mobile.jpg"
+          class="cvr"
+          style="display:none"
+        />
+        <div id="socialIcons">
+          <a href="https://twitter.com/peoplemag" target="_blank"
+            ><img src="resources/images/img-logo-twit.png" id="twitter"
+          /></a>
+          <a href="https://www.facebook.com/peoplemag" target="_blank"
+            ><img src="resources/images/img-logo-fb.png" id="facebook"
+          /></a>
+          <a href="http://www.pinterest.com/people/" target="_blank"
+            ><img src="resources/images/img-logo-pint.png" id="pinterest"
+          /></a>
+        </div>
+        <div class="headline">
+          In This Week's Issue:<br /><span id="headline"></span>
+        </div>
+        <div
+          id="nextScreen2"
+          class="previewBut"
+          onclick="toggleMe('screen2'); toggleMe('screen3'); scrollToAnchor('highlights'); "
+        >
+          <img src="resources/images/img-preview-here.png" />
+        </div>
+      </div>
+      <!--END SCREEN 1-->
 
-	</div>
-	<!--END SCREEN 4-->
-	
-		
-</div>
+      <div id="screen2">
+        <!--Page highlights-->
+        <div id="highlights" style="height:100px;">
+          <a name="highlights"
+            ><span class="header" style="float:left"
+              >HIGHLIGHTS <br />THIS WEEK</span
+            ></a
+          ><span class="highlightIcon"
+            ><img src="resources/images/icn-highlight.png"
+          /></span>
+        </div>
+        <div class="pageDiv">
+          <div class="page">P. <span id="pageNum1"></span></div>
+          <div id="page1"></div>
+        </div>
+        <div class="pageDiv">
+          <div class="page">P. <span id="pageNum2"></span></div>
+          <div id="page2"></div>
+        </div>
+        <div class="pageDiv">
+          <div class="page">P. <span id="pageNum3"></span></div>
+          <div id="page3"></div>
+        </div>
+        <!--end Page highlights-->
+      </div>
+      <!--END SCREEN 2-->
+      <div id="screen3">
+        <!--Sneak Peek Images-->
+        <div style="height:85px;">
+          <span class="headerSneak" style="float:left">SNEAK A PEEK</span>
+        </div>
+        <a name="sneakpeek"></a>
+        <div id="screen3a">
+          <div
+            class="sneakPeekDiv"
+            id="starTracksDiv"
+            onclick="sneakPeekShow('starTracks');"
+          >
+            <div class="sneakPeek">Star Tracks</div>
+            <img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon" />
+            <div style="clear:both"></div>
+            <div class="rotateText">Rotate screen for full page view</div>
+            <div id="starTracks"><br /></div>
+          </div>
+          <div
+            class="sneakPeekDiv"
+            id="featureDiv"
+            onclick="sneakPeekShow('feature'); "
+          >
+            <div class="sneakPeek">Feature</div>
+            <img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon" />
+            <div style="clear:both"></div>
+            <div class="rotateText">Rotate screen for full page view</div>
+            <div id="feature"><br /></div>
+          </div>
+          <div
+            class="sneakPeekDiv"
+            id="greatIdeasDiv"
+            onclick="sneakPeekShow('greatIdeas');"
+          >
+            <div class="sneakPeek">Great Ideas</div>
+            <img src="resources/images/icn-arrow-pink-rgt.png" class="rtIcon" />
+            <div style="clear:both"></div>
+            <div class="rotateText">Rotate screen for full page view</div>
+            <div id="greatIdeas"><br /></div>
+          </div>
+        </div>
+        <!--end Sneak Peek Images-->
+      </div>
+      <!--END SCREEN 3-->
+      <div id="screen4">
+        <div style="height:100px;">
+          <a name="getTheIssue"
+            ><span class="header" style="float:left"
+              >GET THE <br />ISSUE NOW!</span
+            ></a
+          >
+        </div>
+        <div id="screen4a">
+          <div class="buyIssueDiv">
+            <div class="buyIssueImg">
+              <img
+                src="resources/images/cvr-mobile.jpg"
+                class="cvrClipped"
+                style="display:none"
+              />
+            </div>
+            <div class="buyIssue">BUY THIS WEEK'S <br />DIGITAL ISSUE</div>
+            <div class="buyNowIcon">
+              <a
+                href="https://subscription.people.com/storefront/subscribe-to-people/site/pe-webappsingle.html"
+                target="_blank"
+                ><img src="resources/images/icn-buy-now.png" id="buyNow"
+              /></a>
+            </div>
+          </div>
 
-<div id="facebookPixels"></div>
-<div id="twitterPixels"></div>
-<div id="pinterestPixels"></div>
-<div id="sneakPeekPixels"></div>
-<div id="couponPixels"></div>
-<div id="buyNowPixels"></div>
-<!-- SiteCatalyst -->
-<div style="display:none;">
-<script type="text/javascript" src="../../../../../default/template-resources/js/omniture/accounts.js"></script>
-<script type="text/javascript" >
-document.write(unescape('%3Cscript type="text/javascript" src="../../../../../default/template-resources/js/omniture/config/'+aOmn['PE']+'.js"%3E%3C/script%3E'));
-</script>
-<script type="text/javascript" >
-var omniFP = window.location.pathname.match(/[a-z0-9_-]+\/[a-z0-9_-]+\.html/i);
-omniFP = omniFP[0] ? omniFP[0] + " | " : "";
-s.pageName = "TCM_PE : " + omniFP + document.title;
-s.server=window.location.host;
-s.channel=s.prop16="Consumer Marketing";
-s.pageType="";
-s.prop17=location.protocol + "//" + location.host + location.pathname;
-var s_code=s.t();
-if(s_code){document.write(s_code);}
-</script>
-</div>
-<!-- End SiteCatalyst -->
+          <div class="couponDiv">
+            <div class="coupon">SAVE $1 ON <br />THE NEWEST ISSUE</div>
+            <div class="couponImg">
+              <a
+                href="http://coupon.qples.com/qples/v3/printn.html?1691"
+                target="_blank"
+                ><img src="resources/images/btn-click-here.png" id="coupon"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="scrollUpBut" onclick="scrollToAnchor('top');">
+          scroll&nbsp;<img
+            src="resources/images/icn-topscroll.png"
+            style="display:inline;width:33px; height:16px"
+          />&nbsp;to top
+        </div>
+      </div>
+      <!--END SCREEN 4-->
+    </div>
 
-</body>
+    <div id="facebookPixels"></div>
+    <div id="twitterPixels"></div>
+    <div id="pinterestPixels"></div>
+    <div id="sneakPeekPixels"></div>
+    <div id="couponPixels"></div>
+    <div id="buyNowPixels"></div>
+    <!-- SiteCatalyst -->
+    <div style="display:none;">
+      <script
+        type="text/javascript"
+        src="../../../../../default/template-resources/js/omniture/accounts.js"
+      ></script>
+      <script type="text/javascript">
+        document.write(
+          unescape(
+            '%3Cscript type="text/javascript" src="../../../../../default/template-resources/js/omniture/config/' +
+              aOmn["PE"] +
+              '.js"%3E%3C/script%3E'
+          )
+        );
+      </script>
+      <script type="text/javascript">
+        var omniFP = window.location.pathname.match(
+          /[a-z0-9_-]+\/[a-z0-9_-]+\.html/i
+        );
+        omniFP = omniFP[0] ? omniFP[0] + " | " : "";
+        s.pageName = "TCM_PE : " + omniFP + document.title;
+        s.server = window.location.host;
+        s.channel = s.prop16 = "Consumer Marketing";
+        s.pageType = "";
+        s.prop17 = location.protocol + "//" + location.host + location.pathname;
+        var s_code = s.t();
+        if (s_code) {
+          document.write(s_code);
+        }
+      </script>
+    </div>
+    <!-- End SiteCatalyst -->
+  </body>
 </html>
